--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "next": "15.3.2",
     "next-safe-action": "^7.10.8",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.4.3",
     "pg": "^8.16.0",
-    "react": "^19.1.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.4",
     "react-number-format": "^5.4.4",
     "sonner": "^2.0.3",
@@ -48,8 +49,8 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
